--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,3 @@
 PORT  = 5001
 MONGO_URL = "mongodb://localhost:27017/employee-management-system"
+TOKEN_SECRET = "akccjjdjkackdjawgaiwwpajeudhaayeoaieydiaoa"
